; ModuleID = '/home/carl/AnghaBench/libevent/extr_event.c_event_base_foreach_event.c'
source_filename = "/home/carl/AnghaBench/libevent/extr_event.c_event_base_foreach_event.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.event_base = type { i32 }

@th_base_lock = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @event_base_foreach_event(%struct.event_base* %0, i32 %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.event_base*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  store %struct.event_base* %0, %struct.event_base** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  %9 = load i32, i32* %6, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %14

11:                                               ; preds = %3
  %12 = load %struct.event_base*, %struct.event_base** %5, align 8
  %13 = icmp ne %struct.event_base* %12, null
  br i1 %13, label %15, label %14

14:                                               ; preds = %11, %3
  store i32 -1, i32* %4, align 4
  br label %27

15:                                               ; preds = %11
  %16 = load %struct.event_base*, %struct.event_base** %5, align 8
  %17 = load i32, i32* @th_base_lock, align 4
  %18 = call i32 @EVBASE_ACQUIRE_LOCK(%struct.event_base* %16, i32 %17)
  %19 = load %struct.event_base*, %struct.event_base** %5, align 8
  %20 = load i32, i32* %6, align 4
  %21 = load i8*, i8** %7, align 8
  %22 = call i32 @event_base_foreach_event_nolock_(%struct.event_base* %19, i32 %20, i8* %21)
  store i32 %22, i32* %8, align 4
  %23 = load %struct.event_base*, %struct.event_base** %5, align 8
  %24 = load i32, i32* @th_base_lock, align 4
  %25 = call i32 @EVBASE_RELEASE_LOCK(%struct.event_base* %23, i32 %24)
  %26 = load i32, i32* %8, align 4
  store i32 %26, i32* %4, align 4
  br label %27

27:                                               ; preds = %15, %14
  %28 = load i32, i32* %4, align 4
  ret i32 %28
}

declare dso_local i32 @EVBASE_ACQUIRE_LOCK(%struct.event_base*, i32) #1

declare dso_local i32 @event_base_foreach_event_nolock_(%struct.event_base*, i32, i8*) #1

declare dso_local i32 @EVBASE_RELEASE_LOCK(%struct.event_base*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
